# airglowrsss

./: .gitignore  Dockerfile  macos_python_setup.md  pyproject.toml
.github/workflows/: ci.yml
DataManagement/: Zipper.py
DataManagement/airglow/: Sender.py
Python/modules/: cloud_storage.py
src/airglow/: ASI.py  ASIDisplay.py  FPI.py  FPIDataHandler.py  FPIDisplay.py  FPIDisplayNew.py  FPIprocess.py  FPIprocess_OSN.py  GitHubIssueHandler.py  MANGODisplay_OSN.py  MANGO_L2.py  OmegaK_enhanced.py  airglow_pipeline.py  asiinfo.py  bu_process.py  cloud_storage.py  fpiinfo.py  gabor.py  gabor_reconstruction.py  phase_speed_kalman.py  plotmangodasi.py  prepare_agimages.py  test_normalization.ipynb  wave_validation.py
src/airglow/dagster_airglow/: analysis_asset.py  sensors.py
src/airglow/dagster_airglow/assets/: analysis_asset.py  delete_raw.py  upload_chunked_archive.py
src/airglow/notebooks/: MANGO_OnDemand.ipynb
tests/: test_instrument_upload_sensor.py  test_upload_delete_assets.py
tests/integration_tests/: test_analysis_asset.py
