[project]
name = "airglowrsss"
version = "0.1.0"
description = "Airglow data analysis tools"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy==2.2.4",
    "ephem==4.2",
    "matplotlib==3.10.1",
    "lmfit==1.1.0",
    "mahotas==1.4.18",
    "h5py==3.13.0",
    "PyGithub",
]

[project.optional-dependencies]
dagster = [
    "dagster",
    "dagster-ncsa>=0.1.3",
    "dagster-cloud",
    "boto3==1.34.131",
    "dagster-aws",
    "dagster-postgres",
    "dagster-mysql",
]
dev = [
    "dagster-webserver",
    "pytest",
    "pytest-mock",
    "flake8",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "airglow.dagster_airglow.definitions"
code_location_name = "src"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["dagster_airglow_tests"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

